test/invalid/baseline/enum.txt
Syntax error at line 1 in enum.widl, since `enum foo`:
enum foo { 1, 2, 3
           ^ Unexpected value in enum
